--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-image: maven:3.3.9-jdk-8
 
 variables:
   # This will supress any download for dependencies and plugins or upload messages which would clutter the console log.
@@ -13,7 +12,8 @@ cache:
    paths:
     - .m2/repository 
 
-mybuild:
+java8:
+    image: maven:3.3.9-jdk-8
     stage: build
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy -Dmaven.test.failure.ignore=true 
@@ -22,3 +22,9 @@ mybuild:
        paths:
         - org.*/target/*.jar
        expire_in: 4 weeks
+
+java7:
+    image: maven:3.3.9-jdk-7
+    stage: build
+    script: 
+      - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy -Dmaven.test.failure.ignore=true 
