--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,15 +15,19 @@ java8:
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy -Dmaven.test.failure.ignore=true 
       - mvn $MAVEN_CLI_OPTS sonar:sonar
+    cache:
+       paths:
+        - .m2/repository 
+
+jars-j8:
+    image: frekele/ant:1.10.1-jdk8
+    script: 
       - ant -Drelease=NIGHTLY sat
     artifacts:
        paths:
         - dist/NIGHTLY/*.jar
        expire_in: 4 weeks
-    cache:
-       paths:
-        - .m2/repository 
-
+  
 java7:
     image: maven:3.3.9-jdk-7
     stage: build
