--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ java8:
 
 jars-j8:
     image: frekele/ant:1.10.1-jdk8
+    stage: build
     script: 
       - ant -Drelease=NIGHTLY sat
     artifacts:
@@ -30,12 +31,12 @@ jars-j8:
   
 java7:
     image: maven:3.3.9-jdk-7
-    stage: build
+    stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.failure.ignore=true -Dmaven.javadoc.skip=true
 
 java9:
     image: maven:3.5.0-jdk-9
-    stage: build
+    stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.failure.ignore=true -Dmaven.javadoc.skip=true
