allow java 9 build to fail until configuration issue is solved

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,3 +40,4 @@ java9:
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.failure.ignore=true -Dmaven.javadoc.skip=true
+    allow_failure: true
