--- a/build.xml
+++ b/build.xml
@@ -179,6 +179,30 @@
                 </antcall>
 	</target>
 
+	<target name="kth" depends="core,pseudo,maxsat" description="Build a jar file suitable for KTH">
+		<echo>Building the Java SAT Solvers toolkit for KTH experiments</echo>
+                <antcall target="build">
+		   <param name="package" value="sat"/>
+		   <param name="src" value="org.sat4j.sat/src/main/java" />
+                   <param name="jarname" value="org.sat4j.sat"/>
+		</antcall>
+                <echo>Create All-In-One auto-executable package</echo>
+                <jar destfile="${dist}/${release}/sat4j-kth.jar" basedir="${build}">		 
+                   <manifest>
+                       <attribute name="Main-Class" value="org.sat4j.sat.KTHLauncher"/>
+                   </manifest>
+		   <zipgroupfileset dir="${dist}/${release}">
+                           <include name="org.sat4j.core.jar"/>
+                           <include name="org.sat4j.pb.jar"/>
+			   <include name="org.sat4j.sat.jar"/>
+		   </zipgroupfileset>
+                   <zipgroupfileset dir="${lib}">
+                           <include name="commons-cli.jar"/>
+                           <include name="commons-logging.jar"/>
+		   </zipgroupfileset>
+               </jar>
+	</target>
+
 	<target name="remote" depends="core,pseudo,maxsat" description="Build a jar file suitable for build the incredible sat4j remote control">
 		<echo>Building the Java SAT Solvers toolkit</echo>
                 <antcall target="build">
