--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ java8:
     image: maven:3.5.0-jdk-8
     stage: build
     script: 
-      - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy -Dmaven.test.failure.ignore=true 
+      - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
       - mvn $MAVEN_CLI_OPTS sonar:sonar
     cache:
        paths:
@@ -33,11 +33,11 @@ java7:
     image: maven:3.5.0-jdk-7
     stage: test
     script: 
-      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.failure.ignore=true -Dmaven.javadoc.skip=true
+      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
 
 java9:
     image: maven:3.5.0-jdk-9
     stage: test
     script: 
-      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.failure.ignore=true -Dmaven.javadoc.skip=true
+      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
     allow_failure: true
