Adding build for java 11. Moving from maven 3.5.3 to 3.5.4 for that.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 
 java8:
-    image: maven:3.5.3-jdk-8
+    image: maven:3.5.4-jdk-8
     stage: build
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
@@ -30,14 +30,21 @@ jars-j8:
        expire_in: 4 weeks
   
 java7:
-    image: maven:3.5.3-jdk-7
+    image: maven:3.5.4-jdk-7
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
 
 java10:
-    image: maven:3.5.3-jdk-10
+    image: maven:3.5.4-jdk-10
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
-    allow_failure: true
+    allow_failure: false
+    
+java11:
+    image: maven:3.5.4-jdk-11
+    stage: test
+    script: 
+      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
+    allow_failure: false
