Revert "Update jacoco artifact id."
This reverts commit e8c890230bd572aba0312845c9c38162882cf55c.

--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco</artifactId>
+				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.2</version>
 				<executions>
 					<execution>
@@ -339,7 +339,7 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco</artifactId>
+				<artifactId>jacoco-maven-plugin</artifactId>
 				<reportSets>
 					<reportSet>
 						<reports>
