--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 
 java8:
-    image: maven:3.5.4-jdk-8
+    image: maven:3.5.4-jdk-8-alpine
     stage: build
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
@@ -30,20 +30,20 @@ jars-j8:
        expire_in: 4 weeks
   
 java7:
-    image: maven:3.5.4-jdk-7
+    image: maven:3.5.4-jdk-7-alpine
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
 
 java10:
-    image: maven:3.5.4-jdk-10
+    image: maven:3.5.4-jdk-10-alpine
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
     allow_failure: false
     
 java11:
-    image: maven:3.5.4-jdk-11
+    image: maven:3.5.4-jdk-11-alpine
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
