adding java 6 build, removing java 10 one

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,19 +28,19 @@ jars-j8:
        paths:
         - dist/NIGHTLY/*.jar
        expire_in: 4 weeks
+
+java6:
+    image: maven:3.5.4-jdk-6-alpine
+    stage: test
+    script: 
+      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
+    allow_failure: true
   
 java7:
     image: maven:3.5.4-jdk-7-alpine
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
-
-java10:
-    image: maven:3.5.4-jdk-10
-    stage: test
-    script: 
-      - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
-    allow_failure: true
     
 java11:
     image: maven:3.5.4-jdk-11
