--- a/pom.xml
+++ b/pom.xml
@@ -220,8 +220,9 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
 						<groupId>org.umlgraph</groupId> <artifactId>doclet</artifactId> <version>5.1</version> 
 						</docletArtifact> -->
 					<additionalparam>-Xdoclint:none</additionalparam>
+					<additionalOptions>-Xdoclint:none</additionalOptions>
+         			<additionalJOption>-Xdoclint:none</additionalJOption>
 					<useStandardDocletOptions>true</useStandardDocletOptions>
-
 				</configuration>
 				<executions>
 					<execution>
