--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,15 +35,15 @@ java7:
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
     allow_failure: true
     
-java11:
-    image: maven:3.5.4-jdk-11
+maven36-java11:
+    image: maven:3.6.1-jdk-11-slim
     stage: test
     script: 
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
     allow_failure: true
 
 maven36-java12:
-    image: maven:3.6-jdk-12
+    image: maven:3.6.1-jdk-12
     stage: test
     script:
       - mvn $MAVEN_CLI_OPTS clean package -Dmaven.javadoc.skip=true
