--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ variables:
 java8-sonar:
     image: maven:3.5.4-jdk-8-alpine
     stage: build
-    only: master
+    only: 
+      - master
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
       - mvn $MAVEN_CLI_OPTS sonar:sonar
@@ -22,7 +23,8 @@ java8-sonar:
 java8:
     image: maven:3.5.4-jdk-8-alpine
     stage: build
-    except: master
+    except: 
+      - master
     script: 
       - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
     cache:
