Added ne reader feature.

--- a/org.sat4j.core/features.properties
+++ b/org.sat4j.core/features.properties
@@ -6,3 +6,4 @@ simplifications=Learned constraints simplification policy
 deletion=Learned constraints deletion policy
 varheuristics=Variable selection heuristics
 phaseheuristics=Phase selection policy for a given variable
+reader=Reader responsible for feeding the solver
