--- a/org.sat4j.core/features.properties
+++ b/org.sat4j.core/features.properties
@@ -7,3 +7,5 @@ deletion=Learned constraints deletion policy
 varheuristics=Variable selection heuristics
 phaseheuristics=Phase selection policy for a given variable
 reader=Reader responsible for feeding the solver
+solver=The complexity hierarchy of solvers in Sat4j
+solutionlistener=A listener called when a model is found by the solver
