Annotated prime implicant strategy

--- a/org.sat4j.core/features.properties
+++ b/org.sat4j.core/features.properties
@@ -9,3 +9,4 @@ phaseheuristics=Phase selection policy for a given variable
 reader=Reader responsible for feeding the solver
 solver=The complexity hierarchy of solvers in Sat4j
 solutionlistener=A listener called when a model is found by the solver
+primeimplicant=Prime Implicant computation strategy
