--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.ow2</groupId>
@@ -10,7 +9,7 @@
 	<groupId>org.ow2.sat4j</groupId>
 	<artifactId>org.ow2.sat4j.pom</artifactId>
 	<packaging>pom</packaging>
-	<version>2.3.6-SNAPSHOT</version>
+	<version>2.3.6</version>
 	<name>SAT4J</name>
 	<url>http://www.sat4j.org/</url>
 	<description>
@@ -20,7 +19,8 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
 		<connection>scm:git:https://gitlab.ow2.org/sat4j/sat4j/</connection>
 		<url>https://gitlab.ow2.org/sat4j/sat4j/</url>
 		<developerConnection>scm:git:https://gitlab.ow2.org/sat4j/sat4j/</developerConnection>
-	</scm>
+	  <tag>2_3_6</tag>
+  </scm>
 	<licenses>
 		<license>
 			<name>Eclipse Public License 1.0</name>
@@ -266,10 +266,8 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
 						<configuration>
 							<tasks>
 								<echo>Changing ${bundle-manifest}</echo>
-								<copy file="META-INF/MANIFEST.MF" tofile="${bundle-manifest}"
-									overwrite="true" failonerror="false" />
-								<replace file="${bundle-manifest}" token="9.9.9.token"
-									value="${sat4j.custom.version}">
+								<copy file="META-INF/MANIFEST.MF" tofile="${bundle-manifest}" overwrite="true" failonerror="false" />
+								<replace file="${bundle-manifest}" token="9.9.9.token" value="${sat4j.custom.version}">
 								</replace>
 							</tasks>
 						</configuration>
