--- a/org.sat4j.pb/pom.xml
+++ b/org.sat4j.pb/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.ow2.sat4j</groupId>
     <artifactId>org.ow2.sat4j.pom</artifactId>
-    <version>2.3.6</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <description>
   The pb library contains algorithms for solving pseudo boolean optimization problems.
