--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ maven38-java11-sonar:
     only: 
       - master
     script: 
-      - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy 
-      - mvn $MAVEN_CLI_OPTS jacoco:report sonar:sonar
+      - mvn $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent --settings settings.xml deploy jacoco:report
+      - mvn $MAVEN_CLI_OPTS sonar:sonar
     cache:
        paths:
         - .m2/repository 
