--- a/pom.xml
+++ b/pom.xml
@@ -256,11 +256,11 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
                         <id>translate-qualifier</id>
                         <phase>generate-resources</phase>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <echo>Changing ${bundle-manifest}</echo>
                                 <copy file="META-INF/MANIFEST.MF" tofile="${bundle-manifest}" overwrite="true" failonerror="false" />
                                 <replace file="${bundle-manifest}" token="9.9.9.token" value="${sat4j.custom.version}"></replace>
-                            </tasks>
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
