Use HTTPS for Apache Maven repository URL
Use HTTPS instead of HTTP to avoid issue with recent Maven version (see https://maven.apache.org/docs/3.8.1/release-notes.html).

--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@ Sat4j is a full featured boolean reasoning library designed to bring state-of-th
     <pluginRepositories>
         <pluginRepository>
             <id>apache.snapshots</id>
-            <url>http://repository.apache.org/snapshots/</url>
+            <url>https://repository.apache.org/snapshots/</url>
         </pluginRepository>
     </pluginRepositories>
     <modules>
